--- a/src/app/contacts/template.html
+++ b/src/app/contacts/template.html
@@ -17,7 +17,7 @@
 				<td class="contact-name">
 					<img ng-src="{{contact.avatar}}" class="img-avatar" />&nbsp;{{contact.contact_name}}</td>
 				<td>{{contact.contact_email}}</td>
-				<td>{{contact.phone}}</td>
+				<td>{{contact.contact_phone}}</td>
 			</tr>
 		</table>
 	</perfect-scrollbar>
