--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -670,7 +670,7 @@
     .list-at-user {
         width: 100%;
         max-width: 198px;
-        position: absolute;
+        position: fixed;
         background: white;
         border: 1px solid #a4a4a4;
         z-index: 100000;
