--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -238,6 +238,7 @@
         width: 16px;
         font-size: 10px;
         font-weight: 100;
+        cursor: pointer;
       }
 
       .notice-count{
