--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -16,9 +16,9 @@
       管理控制台
     </div>
     <div class="notif_box" class="message-notice pull-right">
-      <div class="message-dropdown active" dropdown>
+      <div class="message-dropdown" dropdown ng-class="{ active: message_show }">
         <span class="message dropdown-toggle" title="消息" ng-click = "openMessageList()"></span>
-        <label class="message-count letter-count" ng-show = "showMessageCount">{{messageCount}}</label>
+        <label class="message-count letter-count" ng-show = "showMessageCount" ng-click = "openMessageList()">{{messageCount}}</label>
         <perfect-scrollbar class="dropdown-menu" role="menu" class="scroller" wheel-propagation="true" wheel-speed="20" refresh-on-change="true">
            <loading-indicator ng-show="loading"></loading-indicator>
            <div class="no-message" ng-show = "messageList.length == 0"></div>
@@ -44,9 +44,9 @@
            </li>
         </perfect-scrollbar>
       </div>
-      <div class="notice-dropdown" dropdown>
+      <div class="notice-dropdown" dropdown ng-class="{ active: notice_show }">
        <span class="notice dropdown-toggle" title="通知" ng-click = "openNoticeList()"></span>
-       <label class="message-count notice-count" ng-show = "showMoticeCount">{{noticeCount}}</label>
+       <label class="message-count notice-count" ng-show = "showMoticeCount" ng-click = "openNoticeList()">{{noticeCount}}</label>
        <perfect-scrollbar class="dropdown-menu" role="menu" class="scroller" wheel-propagation="true" wheel-speed="50" refresh-on-change="">
           <loading-indicator ng-show="loading"></loading-indicator>
           <div class="no-notice" ng-show = "noticeList.length == 0"></div>
