--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -188,7 +188,7 @@
           margin-top: 0;
         }
       }
-      .notice-dropdown.active {
+      .notice-dropdown.active.open {
         background-color: #418CDD;
       }
 
@@ -203,7 +203,7 @@
         }
         float: left;
       }
-      .message-dropdown.active {
+      .message-dropdown.active.open {
         background-color: #418CDD;
       }
       .notice{
