--- a/src/admin/reports/style.less
+++ b/src/admin/reports/style.less
@@ -1,47 +1,86 @@
 .reports-view {
   color: grey;
+  .top-bar{
+      height: 60px;
+      padding-left: 30px;
+      padding-top: 20px;
+      color: #333;
+      font-size: 15px;
+      line-height: 1.42857;
+  }
+  .top-bar-bottom{
+      background-image: url("../../images/top_shadow.png");
+      background-size: 100% 100%;
+      height: 6px;
+  }
+  
+  .buttonGroup{
+      border-bottom: 1px solid #afafaf;
+      height: 55px;
+      margin-left: 30px;
+      padding-top: 8px;
+      margin-right: 30px;
+      margin-bottom: 5px;
+      padding-left: 16px;
+      span{
+          line-height: 2.3;
+          float: left;
+          margin-right: 10px;
+      }
+      p{
+          margin: 0;
+      }
+      .search-btn{
+          margin-left: 10px;
+      }
+      .export-btn{
+          margin-left: 10px;
+      }
+  }
+  .date-picker{
+      width: 280px;
+      float: left;
+      .date-input{
+          width: 220px;
+      }
+  }
+  .title{
+      height: 35px;
+      margin-left: 40px;
+      margin-right: 40px;
+      border-bottom: 1px solid #afafaf;
+  }
+  
+  .scroller{  
+      overflow-y: hidden;
+      bottom: 41px;
+      left: 0;
+      margin-left: 0;
+      right: 0;
+      top: 160px;
+      position: absolute;
+      margin-left: 40px;
+      margin-right: 30px;
+      .log-grid{
+          margin-right: 20px;
+          .log-row{
+              border-bottom: 1px solid #e8e8e8;
+              height: 45px;
+              overflow: hidden;
+              line-height: 2.3;
+          }
+      }
+  }
+  
 }
 
-.top-bar{
-  height: 60px;
-  padding-left: 60px;
-  padding-top: 20px;
-  color: #333;
-  font-size: 14px;
-  line-height: 1.42857;
-}
-.top-bar-bottom{
-  background-image: url("../../images/top_shadow.png");
-  background-size: 100% 100%;
-  height: 6px;
-}
 
-.title{
-  border-bottom: 1px solid #afafaf;
-  font-weight: bold;
-  height: 35px;
-  margin-left: 40px;
-  margin-right: 40px;
-}
-.buttonGroup{
-  border-bottom: 1px solid #afafaf;
-  height: 45px;
-  margin-left: 30px;
-  padding-top: 8px;
-  padding-bottom: 5px;
-  margin-right: 30px;
-}
-.buttonGroup button {
-  margin-left: 5px;
-  padding: 3px 6px;
-  width: 75px;
-}
 .main-bottom {
   border-top: 1px solid #afafaf;
   bottom: 0;
   color: #888;
   font-size: 12px;
-  height: 40px;
+  height: 41px;
   left:0px;
   position: absolute;
   right: 0;
@@ -52,67 +91,71 @@
   height: 35px;
 }
 
-.log-row{
-  border-bottom: 0.5px solid darkgrey;
-  height: 35px;
-  margin-left: 40px;
-  margin-right: 40px;
-}
+
 .title-time{
-  width:200px;
+  width:15%;
 }
 .title-user{
-  width:10%;
+  width:8%;
 }
 .title-mail{
-  width: 200px;
+  width: 15%;
 }
 .title-file{
   width: 20%;
 }
 .title-opreate{
-  width: 80px;
+  width: 10%;
 }
 .title-fileExt{
-  width: 90px;
+  width: 10%;
 }
 
 .log-time{
-  width:200px;
+  width:15%;
   float: left;
   padding: 8px;
 
 }
 .log-user{
-  width:10%;
+  width:8%;
   float: left;
   padding: 8px;
 }
 .log-mail{
-  width:200px;
+  width:15%;
   float: left;
   padding: 8px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .log-file{
   width: 20%;
   float: left;
   padding: 8px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .log-opreate{
-  width: 80px;
+  width: 10%;
   float: left;
   padding: 8px;
 }
 .log-fileExt{
-  width: 90px;
+  width: 10%;
   float: left;
   padding: 8px;
 }
 
-.log-location
-{
+.log-location{
+  width: 20%;  
   float: left;
   padding: 8px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 
