--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -661,6 +661,10 @@
       .preview {
         float: right;
       }
+      .preview:hover{
+        cursor: pointer;
+        color: #428bca;  
+      }
     }
     img{
         float: left;
