--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -168,14 +168,20 @@
       }
       
       .no-notice{
-        height: 280px;
-        width: 400px;
-        background: url('../../images/notice_empty.png') no-repeat;
+        height: 22px;
+        width: 134px;
+        background: url('../../images/web_notice_empty.png') no-repeat;
+        margin: 0 auto;
+        position: relative;
+        top: 130px;
       }
       .no-message{
-        height: 280px;
-        width: 400px;
-        background: url('../../images/message_empty.png') no-repeat;
+        height: 27px;
+        width: 178px;
+        background: url('../../images/web_message_empty.png') no-repeat;
+        margin: 0 auto;
+        position: relative;
+        top: 125px;
       }
       
       .notice-dropdown{
