--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -101,10 +101,10 @@
 						</div>
 						<div class="permission-td"> {{obj.permission_value}} </div>
 						<div class="action-td">
-							<div class = "link-share-ico" ng-click = "linkShare($event, obj)" ng-class = "{ is_edit: obj.is_getLink }"></div>
-							<div class = "share-ico" ng-show = "obj.folder" ng-click = "inviteTeamUsers($event, obj)" ng-class = "{ is_edit: obj.is_edit }"></div>
+							<div class = "link-share-ico" ng-click = "linkShare($event, obj)" ng-class = "{ is_edit: obj.is_getLink }" tooltip-append-to-body="true" tooltip-placement="top" tooltip="外部链接协作"></div>
+							<div class = "share-ico" ng-show = "obj.folder" ng-click = "inviteTeamUsers($event, obj)" ng-class = "{ is_edit: obj.is_edit }" tooltip-append-to-body="true" tooltip-placement="top" tooltip="邀请协作人"></div>
 							  <span>{{obj.user_count}}</span>
-							<div class = "discuss-ico" ng-hide = "obj.folder" ng-click="openUserDiscuss(obj)" ng-class = "{ is_edit: obj.is_preview }"></div>
+							<div class = "discuss-ico" ng-hide = "obj.folder" ng-click="openUserDiscuss(obj)" ng-class = "{ is_edit: obj.is_preview }" tooltip-append-to-body="true" tooltip-placement="top" tooltip="讨论"></div>
 							  <span>{{obj.discuss_count}} </span>		
 						</div>
 					</div>
@@ -246,9 +246,9 @@
 				<div class="group-permission" dropdown is-open="group.isopen">
 					<span class="dropdown-toggle">{{group.permission_value}}<span class="caret"></span></span>
 					<ul class="dropdown-menu" role="menu">
-						<li role="presentation" ng-repeat="value in group.permission_value_list" ng-click = "changeGroupPermission(group, value)">
+						<li role="presentation" ng-repeat="value in group.permission_value_list" ng-click = "changeGroupPermission(group, value)" tooltip-append-to-body="true" tooltip-placement="left" tooltip="{{value.t}}">
 							<a role="menuitem" tabindex="-1">
-								{{value}}
+								{{value.v}}
 							</a>
 						</li>
 					</ul>
@@ -274,9 +274,9 @@
 			<div class="user-permission" dropdown is-open="user.isopen">
 				<span class="group-permission dropdown-toggle">{{user.permission_value}}<span class="caret"></span></span>
 				<ul class="dropdown-menu" role="menu">
-					<li role="presentation" ng-repeat="value in user.permission_value_list" ng-click = "changeUserPermission(user, value)">
+					<li role="presentation" ng-repeat="value in user.permission_value_list" ng-click = "changeUserPermission(user, value)" tooltip-append-to-body="true" tooltip-placement="left" tooltip="{{value.t}}" >
 						<a role="menuitem" tabindex="-1">
-							{{value}}
+							{{value.v}}
 						</a>
 					</li>
 				</ul>
