message-menu-pointer

--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -209,6 +209,9 @@
         }
         float: left;
       }
+      .message-dropdown:hover{
+        cursor: pointer;  
+      }
       .message-dropdown.active.open {
         background-color: #418CDD;
       }
