home.html apps.html

--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -262,6 +262,10 @@
     width: 16px;
     &.is_edit{
        cursor: pointer; 
+    }
+    &.is_edit:hover{
+       cursor: pointer;
+       background-position: -16px -38px; 
     }  
   }
   .share-ico{
@@ -273,6 +277,10 @@
     margin-left: 10px;
     &.is_edit{
        cursor: pointer; 
+    }
+    &.is_edit:hover{
+       cursor: pointer;
+       background-position: -16px 0px; 
     }  
   }
   .discuss-ico{
@@ -284,6 +292,10 @@
     margin-left: 10px;
     &.is_edit{
        cursor: pointer; 
+    }
+    &.is_edit:hover{
+       cursor: pointer;
+       background-position: -16px -19px; 
     } 
   }
   
