--- a/src/app/trash/style.less
+++ b/src/app/trash/style.less
@@ -3,7 +3,7 @@
   margin-right: 300px;
   height: 100%;
   position: relative;
-  min-width: 600px;
+//min-width: 600px;
   
   .scroller {
     overflow-y: hidden;
@@ -82,6 +82,7 @@
      }
      .title-name{
          width: 30%;
+         min-width: 170px;
      }
      .title-state{
          width: 25%;
@@ -133,6 +134,7 @@
            overflow: hidden; 
            font-size: 12px;
            color: #666;
+           padding-left: 8px;
        }
        .file-sise-td{
            width: 13%;
@@ -143,6 +145,7 @@
            overflow: hidden; 
            font-size: 12px;
            color: #666;
+           padding-left: 8px;
            span{
               text-overflow: ellipsis;
               white-space: nowrap;
@@ -207,7 +210,7 @@
     width: 30%;
     float: left;
     padding-top: 10px;
-    min-width: 315px;
+    min-width: 170px;
     
     .rename-form{
         float: left;
