--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -188,7 +188,7 @@
 		    </div>
 		   </perfect-scrollbar>
 	    <div class="disc-inputbox col-sm-12" ng-show = "navType == 'dis'">
-	    <textarea
+	    <!--<textarea
       ng-trim="false"
       rows="5"
       cols="100"  
@@ -205,8 +205,8 @@
             <span>{{ user.user_name }}</span>
           </li>
         </ul>
-      </span>
-      
+      </span>-->
+      <textarea id="inputor" rows="5" cols="20" at="atOptions"></textarea>
 <!--			<textarea style="width: 100%;" ng-change = "changeDiscussInput(discussContent)" ng-model = "discussContent" ng-keydown = "createUserDiscussByPress($event)"></textarea>		-->
 			<button class="btn btn-default pull-right" ng-disabled="discussButton" ng-click = "createUserDiscuss()">
 				发表
