--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -188,7 +188,7 @@
 		    </div>
 		   </perfect-scrollbar>
 	    <div class="disc-inputbox col-sm-12" ng-show = "navType == 'dis'">
-      <textarea id="inputor" rows="5" cols="20" at="atOptions"></textarea>
+      <textarea id="inputor" rows="5" cols="20" at="atOptions" ng-model = "discussContent"></textarea>
 			<button class="btn btn-default pull-right" ng-disabled="discussButton" ng-click = "createUserDiscuss()">
 				发表
 			</button>
