multilingual and bug

--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -673,6 +673,10 @@
       color: #9A9A9A;
       .file-name {
         float: left;
+        max-width: 260px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
       .preview {
         float: right;
