--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -168,7 +168,7 @@
 	      </button>
 	    </ul>
 	    <div class="preview-file">
-	    	<div class="file-name">{{file.file_name}}</div>
+	    	<div class="file-name" title="{{file.file_name}}">{{file.file_name}}</div>
 	    	<div class="preview" ng-click = "previewFile()" ng-show = "isPreview">预览></div>
 	    </div>
 	     <perfect-scrollbar class="scroller" wheel-propagation="true" wheel-speed="20" refresh-on-change="userDiscussList" ng-show = "navType == 'dis'" scroll-down = "true">
