--- a/src/app/global.less
+++ b/src/app/global.less
@@ -5,6 +5,8 @@ html, body {
     background-color: @body-background-color;
     height: 100%;
     width: 100%;
+    min-width: 1280px;
+    overflow-x: auto;
 }
 
 h3 {
@@ -26,6 +28,7 @@ a:focus{
     position: absolute;
     top: 78px;
     width: 100%;
+    min-width: 1280px;
 }
 
 .sidebar {
