--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -20,7 +20,7 @@
         <perfect-scrollbar class="dropdown-menu" role="menu" class="scroller" wheel-propagation="true" wheel-speed="20" refresh-on-change="true">
            <loading-indicator ng-show="loading"></loading-indicator>
            <div class="no-message" ng-show = "messageList.length == 0"></div>
-           <li ng-click = "messageDetail(message)" ng-repeat="message in messageList" ng-class = "{ isRead : message.is_read == 'true' }" ng-hide = "messageList.length == 0">
+           <li ng-click = "messageDetail($event, message)" ng-repeat="message in messageList" ng-class = "{ isRead : message.is_read == 'true' }" ng-hide = "messageList.length == 0">
              <a>
               <div>
                 <img class="message-userpic" ng-src="{{message.avatar}}" alt="" height="30px" width="30px"/>
