--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -19,12 +19,10 @@
 	  
 	</div>
 	<div class="buttonGroup">
-    <button ng-click="upload()" class="btn btn-default" ng-disabled="!folder_upload">
-              上传文件
-    </button>
-		<button ng-click="showCreateFolder()" class="btn btn-default" ng-disabled="!folder_delete">
-			新建文件夹
-		</button>
+    <button ng-click="upload()" class="btn btn-default" ng-disabled="!folder_upload">上传文件</button>
+		<button ng-click="showCreateFolder()" class="btn btn-default" ng-disabled="!folder_delete">新建文件夹</button>
+		<!--<button ng-click="deleteObjList()" class="btn btn-default" ng-disabled="!folder_delete">删除</button>
+    <button ng-click="removeObjList()" class="btn btn-default" ng-disabled="!folder_delete">移动</button>-->
 	</div>
 	<div class="title">
 	  <div class="title-checkbox col">
