--- a/src/app/global.less
+++ b/src/app/global.less
@@ -98,3 +98,7 @@ a:focus{
         background-color: #1f69ba;
     }
 }
+
+.select2-search-choice-close{
+    background : url("../../images/select2.png") no-repeat scroll right top rgba(0, 0, 0, 0);
+}
