--- a/src/app/upload-progress-dialog/style.less
+++ b/src/app/upload-progress-dialog/style.less
@@ -6,7 +6,6 @@
   bottom:0;
   width:495px;
   background:white;
-  border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 6px 6px 0 0;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
@@ -49,7 +48,7 @@
 .upload-progress-dialog .scroller {
   overflow-y: hidden;
   height: 280px;
-  position: relative;  
+  position: relative;
 }
 .upload-progress-dialog  .progress-item {
   height:30px;
@@ -72,17 +71,17 @@
   width: 15px;
 }
 .upload-progress-dialog  .file-name {
-    width:180px;
-    float: left;
-    padding-top: 4px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+  width:180px;
+  float: left;
+  padding-top: 4px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .upload-progress-dialog  .file-size {
-    width:85px;
-    float: left;
-    padding-top: 4px;
+  width:85px;
+  float: left;
+  padding-top: 4px;
 }
 .upload-progress-dialog  .file-progress{
   width:100px;
@@ -93,17 +92,18 @@
 }
 .upload-progress-dialog .file-progress-size{
   padding-top: 4px;
-  float: left;  
+  float: left;
 }
 
-.file-upload-success{
-    background-position:0 -26px;
-    float: right;
+.upload-progress-dialog .dialog-btn.file-upload-success{
+  background-position:0 -26px;
+  float: right;
+  cursor: default;
 }
 
 .delete-upload{
-    background-position:0 -42px;
-    float: right;
+  background-position:0 -42px;
+  float: right;
 }
 .upload-progress-dialog  .file-progress a{
   display:block;
