--- a/src/app/upload-progress-dialog/template.html
+++ b/src/app/upload-progress-dialog/template.html
@@ -1,6 +1,6 @@
 <div ng-show="shown" ng-controller="App.UploadProgressDialog.Controller" class="upload-progress-win">
   <div class="dialog-header">
-      <div class="dialog-title">正在上传</div>
+      <div class="dialog-title">上传列表</div>
       <div class="dialog-btn btn-close" ng-click="hide()"></div>
       <div class="dialog-btn btn-max" ng-show="!isMax" ng-click="max()"></div>
       <div class="dialog-btn btn-min" ng-show="isMax" ng-click="min()"></div>
@@ -16,10 +16,14 @@
           <span class="file-progress-size" ng-hide = "file.progress == 100">
             {{file.progress}}%
           </span>
+          <span class="delete-upload dialog-btn" ng-show = "file.progress == 100" ng-click="remove(file)">          
+          </span>
           <span class="file-upload-success dialog-btn" ng-show = "file.progress == 100">         
           </span>
-          <span class="delete-upload dialog-btn" ng-hide = "file.progress == 100" ng-click="file.upload.abort()">          
-          </span>
+          <div class="pull-right" ng-click="remove(file)">
+            <span class="delete-upload dialog-btn" ng-hide = "file.progress == 100" ng-click="file.upload.abort()">          
+            </span>
+          </div>
       </div>
   </perfect-scrollbar>
 </div>
