--- a/src/app/files/invite-team-users/template.html
+++ b/src/app/files/invite-team-users/template.html
@@ -68,35 +68,35 @@
     <div class="col-sm-4 select-invite"  ng-show = "broad">
       <div class="form-group">
         <div class="col-sm-12">
-          <input type="name" class="form-control" name="username" placeholder="输入姓名或者邮箱">
+          <input type="name" class="form-control" name="username" placeholder="输入查找" ng-model="searchText">
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-12">
+        <!--<div class="col-sm-12">
           全选
-        </div>
+        </div>-->
       </div>
         <perfect-scrollbar class="scroller" wheel-propagation="true" wheel-speed="20" refresh-on-change="userList" suppress-scroll-x = "true">
-        <div class="groups-div">
-          <div class="group" ng-repeat="group in groupList">
-            <input type="checkbox" ng-click = "inviteBySelect(group, group.selected)" ng-model = "group.selected"/>
-            <img  width="24px" height="24px" src="./images/grouplist_icon.png"/>
-            <span class="group-name">{{group.group_name}}</span>
-            <span class="group-user-count">({{group.user_count}})</span>
-            <span class="arrows-img" ng-click = "changeGroupshow(group)"></span>
-            <div class="col-sm-12 group-user" ng-repeat="user in group.users" ng-show = "group.show">
+          <div class="groups-div">
+            <div class="group" ng-repeat="group in groupList | filter:searchText">
+              <input type="checkbox" ng-click = "inviteBySelect(group, group.selected)" ng-model = "group.selected"/>
+              <img  width="24px" height="24px" src="./images/grouplist_icon.png"/>
+              <span class="group-name">{{group.group_name}}</span>
+              <span class="group-user-count">({{group.user_count}})</span>
+              <span class="arrows-img" ng-click = "changeGroupshow(group)"></span>
+              <div class="col-sm-12 group-user" ng-repeat="user in group.users" ng-show = "group.show">
+                <img  width="24px" height="24px" ng-src="{{user.avatar}}"/>
+                <span class="group-name">{{user.real_name}}</span>
+              </div>
+            </div>
+          </div>
+          <div class="users-div">
+            <div class="user" ng-repeat="user in userList | filter:searchText">
+              <input type="checkbox" ng-click = "inviteBySelect(user, user.selected)" ng-model = "user.selected" />
               <img  width="24px" height="24px" ng-src="{{user.avatar}}"/>
               <span class="group-name">{{user.real_name}}</span>
             </div>
           </div>
-        </div>
-        <div class="users-div">
-          <div class="user" ng-repeat="user in userList">
-            <input type="checkbox" ng-click = "inviteBySelect(user, user.selected)" ng-model = "user.selected" />
-            <img  width="24px" height="24px" ng-src="{{user.avatar}}"/>
-            <span class="group-name">{{user.real_name}}</span>
-          </div>
-        </div>
         </perfect-scrollbar>
     </div>
   </div>
