--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -97,7 +97,7 @@
 						  <span ng-show = "obj.folder">{{obj.file_count}}</span>
 						  <span ng-hide = "obj.folder">{{obj.format_size}}</span>
 						</div>
-						<div class="permission-td"> {{obj.permission_value}} </div>
+						<div class="permission-td"> {{obj.permission_value | translate}} </div>
 						<div class="action-td">
 							<div class = "link-share-ico" ng-click = "linkShare($event, obj)" ng-class = "{ is_edit: obj.is_getLink }" tooltip-append-to-body="true" tooltip-placement="top" tooltip="外部链接协作"></div>
 							<div class = "share-ico" ng-show = "obj.folder" ng-click = "inviteTeamUsers($event, obj)" ng-class = "{ is_edit: obj.is_edit }" tooltip-append-to-body="true" tooltip-placement="top" tooltip="邀请协作人"></div>
@@ -247,7 +247,7 @@
 					<span class="group-user-count">({{group.user_count}})</span>
 				</div>
 				<div class="group-permission" dropdown is-open="group.isopen">
-					<span class="dropdown-toggle">{{group.permission_value}}<span class="caret"></span></span>
+					<span class="dropdown-toggle">{{group.permission_value | translate}}<span class="caret"></span></span>
 					<ul class="dropdown-menu" role="menu">
 						<li role="presentation" ng-repeat="value in group.permission_value_list" ng-click = "changeGroupPermission(group, value)" tooltip-append-to-body="true" tooltip-placement="left" tooltip="{{value.t}}">
 							<a role="menuitem" tabindex="-1">
@@ -275,7 +275,7 @@
 				<span class="user-name">{{user.real_name}}</span>
 			</div>
 			<div class="user-permission" dropdown is-open="user.isopen">
-				<span class="group-permission dropdown-toggle">{{user.permission_value}}<span class="caret"></span></span>
+				<span class="group-permission dropdown-toggle">{{user.permission_value | translate}}<span class="caret"></span></span>
 				<ul class="dropdown-menu" role="menu">
 					<li role="presentation" ng-repeat="value in user.permission_value_list" ng-click = "changeUserPermission(user, value)" tooltip-append-to-body="true" tooltip-placement="left" tooltip="{{value.t}}" >
 						<a role="menuitem" tabindex="-1">
