--- a/src/app/search/template.html
+++ b/src/app/search/template.html
@@ -1,6 +1,6 @@
 <div class="files-view" ng-controller="App.Search.Controller">
 	<div class="top-bar">
-		<div class="pull-left root-path" ng-class = "{ isRoot: isRoot }"> 
+		<div class="pull-left root-path" ng-class = "{ isRoot: isRoot }">
 			<a>
 				搜索结果
 			</a>
@@ -16,7 +16,7 @@
 		</div>-->
 	</div>
 	<div class="top-bar-bottom">
-	  
+
 	</div>
 	<div class="buttonGroup">
     <!--<button ng-click="upload()" class="btn btn-default" ng-disabled="!folder_upload">
@@ -34,16 +34,16 @@
 	    <span>文件名</span>
 	  </div>
 	  <div class="title-state col">
-	    <span>状态</span>           
+	    <span>状态</span>
 	  </div>
 	  <div class="title-size col">
-	    <span>大小</span>      
+	    <span>大小</span>
 	  </div>
 	  <div class="title-permission col">
-	    <span>权限</span>          
+	    <span>权限</span>
 	  </div>
 	  <div class="title-action col">
-      <span>分享</span>          
+      <span>分享</span>
     </div>
   </div>
   <perfect-scrollbar class="scroller" wheel-propagation="true" wheel-speed="20" refresh-on-change="objList" on-scroll="onFileListScroll(scrollTop, scrollHeight)">
@@ -99,13 +99,13 @@
 						  <span ng-show = "obj.folder">{{obj.file_count}}</span>
 						  <span ng-hide = "obj.folder">{{obj.format_size}}</span>
 						</div>
-						<div class="permission-td"> {{obj.permission_value}} </div>
+						<div class="permission-td"> {{obj.permission_value | translate}} </div>
 						<div class="action-td">
 							<div class = "link-share-ico" ng-click = "linkShare($event, obj)" ng-class = "{ is_edit: obj.is_getLink }" tooltip-append-to-body="true" tooltip-placement="top" tooltip="外部链接协作"></div>
 							<div class = "share-ico" ng-show = "obj.folder" ng-click = "inviteTeamUsers($event, obj)" ng-class = "{ is_edit: obj.is_edit }" tooltip-append-to-body="true" tooltip-placement="top" tooltip="邀请协作人"></div>
 							  <span>{{obj.user_count}}</span>
 							<div class = "discuss-ico" ng-hide = "obj.folder" ng-click="openUserDiscuss(obj)" ng-class = "{ is_edit: obj.is_preview }" tooltip-append-to-body="true" tooltip-placement="top" tooltip="讨论"></div>
-							  <span>{{obj.discuss_count}} </span>		
+							  <span>{{obj.discuss_count}} </span>
 						</div>
 					</div>
 					<div class="dropdown position-fixed" id="myMenu">
@@ -137,7 +137,7 @@
 							</li>
 							<li>
                 <a ng-click="createTag(checkedObj)" class="large button">
-                                              添加标签                          
+                                              添加标签
                 </a>
               </li>
 						</ul>
@@ -188,7 +188,7 @@
 	    <textarea
       ng-trim="false"
       rows="5"
-      cols="100"  
+      cols="100"
       flag="@"
       at-user
       auto-complete
@@ -203,7 +203,7 @@
           </li>
         </ul>
       </span>
-      
+
 <!--			<textarea style="width: 100%;" ng-change = "changeDiscussInput(discussContent)" ng-model = "discussContent" ng-keydown = "createUserDiscussByPress($event)"></textarea>		-->
 			<button class="btn btn-default pull-right" ng-disabled="discussButton" ng-click = "createUserDiscuss()">
 				发表
@@ -225,7 +225,7 @@
       <div class="add_link pull-left col-sm-12"></div>
     </perfect-scrollbar>
 	</div>
-	
+
 	<div class="groups-users" ng-hide = "isRoot">
 		<div class="groups-users-header col-sm-12">
 			<span class="pull-left">全部协作人({{shareObj.user_count}})</span>
@@ -244,7 +244,7 @@
 					<span class="group-user-count">({{group.user_count}})</span>
 				</div>
 				<div class="group-permission" dropdown is-open="group.isopen">
-					<span class="dropdown-toggle">{{group.permission_value}}<span class="caret"></span></span>
+					<span class="dropdown-toggle">{{group.permission_value | translate}}<span class="caret"></span></span>
 					<ul class="dropdown-menu" role="menu">
 						<li role="presentation" ng-repeat="value in group.permission_value_list" ng-click = "changeGroupPermission(group, value)" tooltip-append-to-body="true" tooltip-placement="left" tooltip="{{value.t}}">
 							<a role="menuitem" tabindex="-1">
@@ -272,7 +272,7 @@
 				<span class="user-name">{{user.real_name}}</span>
 			</div>
 			<div class="user-permission" dropdown is-open="user.isopen">
-				<span class="group-permission dropdown-toggle">{{user.permission_value}}<span class="caret"></span></span>
+				<span class="group-permission dropdown-toggle">{{user.permission_value | translate}}<span class="caret"></span></span>
 				<ul class="dropdown-menu" role="menu">
 					<li role="presentation" ng-repeat="value in user.permission_value_list" ng-click = "changeUserPermission(user, value)" tooltip-append-to-body="true" tooltip-placement="left" tooltip="{{value.t}}" >
 						<a role="menuitem" tabindex="-1">
